--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
 
 <head>
-    <title>React Tutorial</title>
+  <title>React Tutorial</title>
 </head>
 
 <body>
-    Hello World
+  Hello World
+  <div id='root'></div>
+
+  <!--Load React-->
+  <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+
+
+  <!--Load React component-->
+  <script src="index.js"></script>
 </body>
 
 </html>
