--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 
+  <!--Load Babel-->
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
   <!--Load React component-->
-  <script src="index.js"></script>
+  <script src="index.js" type="text/babel"></script>
 </body>
 
 </html>
